styles/IndexPageCarousel.module.css
/* CardCarousel.module.css */
.title{
    text-align: center;
    margin: 50px 0px;
}
.wrapper{
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  margin-bottom: 100px;
}
.card{
  text-align: center;
}
.image {
  max-width: 200px ;
  margin: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
}
.buttons{
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: absolute;
}
.buttons button{
  padding: 0;
  background: transparent;
  border: none;
  font-size: 2.5rem;
}

@media screen and (max-width:425px){
  .wrapper{
    margin: 0px 10px;
    margin-bottom: 100px;
  }
  .image,.card{
    width: 150px;
  }
  .buttons{
    display: none;
  }
}

